--- a/index.html
+++ b/index.html
@@ -89,7 +89,11 @@
         <div class="bio">
             <img src="profile.jpg" alt="Your Profile Picture">
             <h2>About Me</h2>
-            <p>KingShadP is a passionate and innovative music artist known for blending genres and creating unique soundscapes. With a deep love for storytelling through music, KingShadP draws inspiration from personal experiences and cultural influences. His journey began with a vision to inspire and connect with audiences worldwide. Notable achievements include releasing chart-topping singles and performing at renowned venues. Join the movement and experience the artistry of KingShadP!</p>
+            <p>KingShadP is a passionate and innovative music artist known for blending genres and creating unique soundscapes. With a deep love for storytelling through music, KingShadP draws inspiration from personal experiences and cultural influences. His journey began with a vision to inspire and connect with audiences worldwide.</p>
+            <p>Growing up, KingShadP was surrounded by diverse musical influences that shaped his eclectic style. From soulful melodies to hard-hitting beats, his music resonates with a wide audience. Each track tells a story, weaving together emotions and experiences that listeners can relate to. Whether it’s a high-energy anthem or a heartfelt ballad, KingShadP’s songs leave a lasting impact.</p>
+            <p>Throughout his career, KingShadP has achieved numerous milestones, including releasing chart-topping singles and collaborating with renowned artists. His performances at major venues and festivals have garnered him a loyal fanbase, and his ability to connect with the audience is unmatched. Critics have praised his artistry, calling him a "visionary" in the music industry.</p>
+            <p>In addition to his music, KingShadP is dedicated to giving back to the community. He actively participates in charity events and uses his platform to inspire the next generation of artists. His commitment to authenticity and innovation continues to set him apart, making him a trailblazer in the industry.</p>
+            <p>Join the movement and experience the artistry of KingShadP. Explore his music, follow his journey, and become part of a story that’s just getting started.</p>
         </div>
     </div>
 
@@ -97,7 +101,7 @@
         <div class="music">
             <h2>My Music</h2>
             <iframe src="https://open.spotify.com/embed/artist/Kingshadp"></iframe>
-            <iframe src="https://www.youtube.com/embed/Kingshadp"></iframe>
+            <iframe src="https://www.youtube.com/embed/Kingshadshit"></iframe>
         </div>
     </div>
 
