--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="youtube-videos">
             <!-- This pulls the uploads for the YouTube channel (username-based). 
                  If this doesn't work for your channel, replace with specific video embed URLs. -->
-            <iframe src="https://www.youtube.com/embed?listType=user_uploads&list=KingShadP" title="YouTube Uploads" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/VIDEO_ID" allowfullscreen></iframe>
         </div>
         <h2 class="section-title">Instagram Feed</h2>
         <div class="instagram-feed">
