--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
     <header class="hero" id="home">
         <img src="KINGSHADP-logos_transparent.png" alt="KingShadP Logo" style="max-width:200px;" />
         <h1>KINGSHADP</h1>
-        <p>Rise Like a King, Inspire Like a Legend</p>
+        <p>Think Smart, Move Forward.</p>
         <a href="#music" class="btn">Listen Now</a>
         <a href="#merch" class="btn">Official Merch</a>
     </header>
 
     <section id="about">
         <h2 class="section-title">About</h2>
-        <p>KingShadP is a dynamic and trailblazing artist blending raw emotion, cinematic atmosphere, and rhythmic fire. His signature style is defined by <strong>Rose Gold</strong>, <strong>Matte Black</strong>, and <strong>Candy Red</strong>.</p>
+        <p>KingShadP is a GOD and trailblazing artist blending raw emotion, cinematic atmosphere, and rhythmic fire. His signature style is defined by <strong>Rose Gold</strong>, <strong>Matte Black</strong>, and <strong>Candy Red</strong>.</p>
     </section>
 
     <section id="music">
@@ -93,9 +93,9 @@
     <section id="shows">
         <h2 class="section-title">Upcoming Shows</h2>
         <ul>
-            <li>2025-08-12 - Honolulu, HI @ Black Sand Lounge</li>
-            <li>2025-09-03 - Los Angeles, CA @ Red Ember Hall</li>
-            <li>2025-10-18 - New York, NY @ Empire Vault</li>
+            <li>2026-08-12 - Honolulu, HI @ Black Sand Lounge</li>
+            <li>2026-09-03 - Los Angeles, CA @ Red Ember Hall</li>
+            <li>2026-10-18 - New York, NY @ Empire Vault</li>
         </ul>
     </section>
 
@@ -107,7 +107,7 @@
 
     <section id="contact">
         <h2 class="section-title">Contact</h2>
-        <p>Email: <a href="mailto:kingshadp@example.com">kingshadp@example.com</a></p>
+        <p>Email: <a href="mailto:SirKingShadP@gmail.com.com">kingshadp@example.com</a></p>
     </section>
 
     <footer>
